--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<hello name="{{ name }}"></hello>
-<p>
-	Start editing to see some magic happen :)
-</p>
-<button class="btn btn-primary">Save</button>
+<h1 class="mb-2 mx-5 bg-success text-white p-2">Angular Unit Testing</h1>
+
+<div class="row mx-5 mt-4">
+	<div class="col-md-3 bg-light p-0">
+		<app-sidebar></app-sidebar>
+	</div>
+
+	<div class="col-md-9">
+		<router-outlet></router-outlet>
+	</div>
+</div>
